kubernetes/uvicorn-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: uvicorn-service
  namespace: demo
spec:
  selector:
    app: uvicorn
  ports:
    - protocol: TCP
      port: 443
      targetPort: 8443
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uvicorn
spec:
  replicas: 1
  selector:
    matchLabels:
      app: uvicorn
  template:
    metadata:
      labels:
        app: uvicorn
    spec:
      containers:
      - name: uvicorn
        image: pedroarias1015/kubernetes-validation-mutating-server:1.0
        imagePullPolicy: Always
        command: ["/usr/local/bin/uvicorn"]
        args: ["main:app", "--host", "0.0.0.0", "--port", "8443", "--ssl-keyfile", "/app/certs/tls.key", "--ssl-certfile", "/app/certs/tls.crt"]
        ports:
        - containerPort: 8443
        volumeMounts:
        - name: certs
          mountPath: /app/certs
        - name: uvicorn-config
          mountPath: /app/uvicorn-config
      volumes:
      - name: certs
        secret:
          secretName: uvicorn-tls-secret
      - name: uvicorn-config
        configMap:
          name: uvicorn-config
