kubernetes/validation-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: validations.codetriarii.org
webhooks:
  - name: pods.validations.codetriarii.org
    rules:
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - CREATE
        resources:
          - pods
        scope: Namespaced
    clientConfig:
      service:
        namespace: demo
        name: uvicorn-service
        path: "/validate"
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURiVENDQWxXZ0F3SUJBZ0lVYk5HNWllNXJKWDBHTmtELzdnaERCYWR0SnFVd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0pqRWtNQ0lHQTFVRUF3d2JkWFpwWTI5eWJpMXpaWEoyYVdObExtUmxiVzh1YzNaaklFTkJNQjRYRFRJMApNRFF5TlRFMk1qUTFNVm9YRFRJMU1EUXlOVEUyTWpRMU1Wb3dKakVrTUNJR0ExVUVBd3diZFhacFkyOXliaTF6ClpYSjJhV05sTG1SbGJXOHVjM1pqSUVOQk1JSUJJakFOQmdrcWhraUc5dzBCQVFFRkFBT0NBUThBTUlJQkNnS0MKQVFFQXc4c2txaU1qZ0FvOC9ZOFFaWHBNZFlDS3M1RzZiem1oL1BkSXN1d0lZUCtGZ0pNWm9NRmFWT2EyQWd1QwpLNTNad1FqaExi [...]
    admissionReviewVersions:
      - v1
    sideEffects: None
    timeoutSeconds: 5
